@@ -1,2 +1,8 @@
 # springboot-kafka-docker-java9
 Sample app built with Spring Boot, Kafka and Docker in Java9
+<br>
+To use it with java9 add this to vm options<br>
+--add-modules java.xml.bind
+<br>
+To build docker image use:<br>
+mvn docker:build
